<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/primary_color">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:contentDescription="App Logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Track it. Save it. Own it."
        android:fontFamily="serif"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/addTransactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_color"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/add_transaction_btn" />

    <Button
        android:id="@+id/viewAnalysisButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_color"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/analysis_btn"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/viewBudgetSetupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_color"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/setup_budget_btn"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/viewSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_color"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/settings_btn"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactionRecyclerView"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="2dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />
</LinearLayout>