<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/primary_color">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="Back"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="277dp"
            android:layout_height="53dp"
            android:layout_marginStart="12dp"
            android:text="Settings"
            android:gravity="center"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="Set Currency"
        android:textSize="18sp"


        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/currency_hint"
        android:inputType="text"
        android:backgroundTint="@color/secondary_color"
        android:textColor="@color/black"
        android:padding="8dp" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_currency_btn"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:backgroundTint="@color/secondary_color"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonExportData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/export_btn"
        android:backgroundTint="@color/secondary_color"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonImportData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/restore_btn"
        android:backgroundTint="@color/secondary_color"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:textColor="@color/white" />
</LinearLayout>
